Argo-Workflows/workflows-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-workflows-ui
  namespace: argo
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-gateway
      sectionName: https
  hostnames:
    - "workflows.local"
    - "argo-workflows.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo-server
          port: 2746
